--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,26 @@ import myImage from "!assets/so-which-one-is-made-up.webp"
 	</div>
 
 	<div class="container my-4">
-		<a class="link" href="https://www.reddit.com/r/lastweektonight/comments/1dn49mc/so_which_one_is_made_up/">So which one is made up? (Reddit)</a>
+		<blockquote class="my-4 text-xl italic font-semibold text-gray-900 dark:text-white">
+			«Someone who is clumsy or inept, perhaps in a somewhat endearing yet mildly insulting way.
+			It might describe someone who frequently trips over their own feet
+			or tends to stumble in awkward situations. The word playfully combines
+			"fuck" (as in something going wrong or being awkward) with "toes,"
+			implying clumsiness or awkwardness related to feet.»
+		</blockquote>
+
+		<div class="divider">OR</div>
+
+		<blockquote class="my-4 text-xl italic font-semibold text-gray-900 dark:text-white">
+			«Fuckletoes could be used to describe someone who is not only clumsy
+			but also foolish or incompetent. It implies that the person not only
+			messes up physically but also lacks intelligence or common sense,
+			making them a source of annoyance or frustration to others.
+			It's a blend of vulgarity ("fuck") and a mocking reference to
+			their lack of coordination ("toes"), emphasizing their ineptitude in a harsh manner.»
+		</blockquote>
+
+		<a class="link my-4" href="https://www.reddit.com/r/lastweektonight/comments/1dn49mc/so_which_one_is_made_up/">So which one is made up? (Reddit)</a>
 		<ul class="my-4 list-disc ml-5">
 			<li><a class="link" href="https://www.hbo.com/last-week-tonight-with-john-oliver">Last Week Tonight With John Oliver (HBO)</a></li>
 			<li><a class="link" href="https://en.wikipedia.org/wiki/Last_Week_Tonight_with_John_Oliver">Last Week Tonight With John Oliver (Wikipedia)</a></li>
