--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,19 @@ import myImage from "!assets/so-which-one-is-made-up.webp"
 			their lack of coordination ("toes"), emphasizing their ineptitude in a harsh manner.»
 		</blockquote>
 
+		<div class="divider">OR</div>
+
+		<blockquote class="my-4 text-xl italic font-semibold text-gray-900 dark:text-white">
+			«Fuckletoes could be a derogatory term used to insult someone's
+			incompetence or idiocy even more aggressively. It implies not
+			just clumsiness or foolishness, but a profound level of ineptitude
+			and stupidity that is exasperating and deserving of scorn.
+			It suggests that the person is not only incapable but also frustratingly so,
+			making repeated mistakes or poor decisions without any sign of improvement.
+			The word combines explicit language ("fuck") with a demeaning critique
+			of their lack of coordination ("toes"), intensifying the insult with a strong dose of disdain.»
+		</blockquote>
+
 		<a class="link my-4" href="https://www.reddit.com/r/lastweektonight/comments/1dn49mc/so_which_one_is_made_up/">So which one is made up? (Reddit)</a>
 		<ul class="my-4 list-disc ml-5">
 			<li><a class="link" href="https://www.hbo.com/last-week-tonight-with-john-oliver">Last Week Tonight With John Oliver (HBO)</a></li>
