Add openpanel snippet (analytics).

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,6 +1,7 @@
 ---
 // self
 import Breakpoints from "!components/breakpoints.astro"
+import OP from "!components/openpanel.astro"
 ---
 <html lang="fr" class="overflow-y-scroll">
 	<head>
@@ -19,5 +20,6 @@ import Breakpoints from "!components/breakpoints.astro"
       <slot >
     </div>
 		}
+		<OP />
 	</body>
 </html>
