--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -17,7 +17,7 @@ import OP from "!components/openpanel.astro"
 		{Astro.url.pathname === '/' ? <slot /> :
 		<div class="container my-4">
 			<h1 class="text-4xl font-bold">{Astro.props.title}</h1>
-      <slot >
+      <slot />
     </div>
 		}
 		<OP />
